# secret_com

./: .clang-format  CMakeLists.txt  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  INTEGRATION_GUIDE.md  PROTOCOL_SPEC.md  安全性深度解析.md  授权系统说明.md  方案设计.md  详细介绍文档.md
examples/: CMakeLists.txt  c_api_demo.c  client_demo.cc  esc_server_keil_demo.c  server_demo.cc
include/secret_com/: auth_client.h  auth_server.h  crypto_provider.h  secret_com.h  transport.h  types.h
src/: auth_client.cc  auth_server.cc  secret_com_c_api.cc
src/crypto/: mbedtls_provider.cc  mbedtls_provider.h
src/protocol/: message_framer.cc  message_framer.h  protocol.h
src/transport/: callback_transport_helper.h  serial_transport.cc  serial_transport.h  tcp_transport.cc  tcp_transport.h
